--- a/static/index.html
+++ b/static/index.html
@@ -1,88 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Welcome to the Windows C Server</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>I Wrote a Web Server in C on Windows for No Reason</title>
   <style>
     body {
-      background: linear-gradient(120deg, #0078d7 0%, #232526 100%);
-      color: #fff;
-      font-family: 'Segoe UI', 'Arial', sans-serif;
       margin: 0;
       padding: 0;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .container {
-      background: rgba(30,30,40,0.90);
-      border-radius: 18px;
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-      padding: 40px 60px;
-      text-align: center;
-      max-width: 520px;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 0.3em;
-      letter-spacing: 2px;
-      background: linear-gradient(90deg, #0078d7, #43cea2, #ee0979);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-    }
-    p {
-      font-size: 1.2em;
-      margin-bottom: 1.5em;
+      background-color: #0d0d0d;
       color: #e0e0e0;
+      font-family: 'Fira Code', monospace;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      text-align: center;
+      background-image: radial-gradient(circle at top, #1a1a1a, #0a0a0a);
     }
-    .btn {
-      display: inline-block;
-      padding: 12px 32px;
+
+    .container {
+      max-width: 750px;
+      padding: 2.5em;
+      background-color: #161616;
+      border-radius: 12px;
+      box-shadow: 0 0 25px rgba(255, 255, 255, 0.05);
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .container:hover {
+      transform: scale(1.01);
+    }
+
+    h1 {
+      font-size: 2.4em;
+      margin-bottom: 0.2em;
+      color: #ff79c6;
+    }
+
+    h2 {
+      font-weight: 400;
+      color: #999;
+      font-size: 1.1em;
+      margin-bottom: 2em;
+    }
+
+    p {
       font-size: 1em;
-      border-radius: 25px;
-      border: none;
-      background: linear-gradient(90deg, #43cea2, #0078d7);
-      color: #fff;
-      cursor: pointer;
-      box-shadow: 0 2px 8px rgba(67,206,162,0.2);
-      transition: background 0.3s;
+      line-height: 1.7;
+      color: #ccc;
+    }
+
+    code {
+      background-color: #2b2b2b;
+      color: #8be9fd;
+      padding: 0.2em 0.4em;
+      border-radius: 4px;
+    }
+
+    .button {
+      margin-top: 2em;
+      display: inline-block;
+      background: #50fa7b;
+      color: #000;
+      padding: 0.7em 1.5em;
+      border-radius: 6px;
       text-decoration: none;
+      font-weight: bold;
+      transition: background 0.2s ease-in-out;
     }
-    .btn:hover {
-      background: linear-gradient(90deg, #ee0979, #ff6a00);
+
+    .button:hover {
+      background: #3de062;
     }
+
     .footer {
       margin-top: 2em;
-      font-size: 0.9em;
-      color: #aaa;
-    }
-    .icon {
-      font-size: 2.2em;
-      margin-bottom: 0.5em;
-      display: block;
+      font-size: 0.85em;
+      color: #666;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <span class="icon">🖥️</span>
-    <h1>Welcome to the Windows C Server</h1>
+    <h1>I Wrote a Web Server in C on Windows for No Reason</h1>
+    <h2>Don't ask why. It just happened.</h2>
     <p>
-      You’re running a web server<br>
-      built from scratch in C,<br>
-      right here on Windows.<br>
-      <span style="color:#43cea2;">Fast. Simple. Yours.</span>
+      This server was built in <code>C</code>, using <code>Winsock2</code>, on <strong>Windows</strong>.  
+      It serves a single file (<code>index.html</code>) and accepts only one client at a time.<br><br>
+      It doesn't scale. It doesn't care. It exists solely because I was bored enough to make it.
     </p>
-    <a class="btn" href="https://github.com/jeswin1811/">See the Code</a>
+    <a class="button" href="https://github.com/jeswin1811/why-did-i-do-this" target="_blank">
+      View the Chaos on GitHub
+    </a>
     <div class="footer">
-      &copy; 2025 Windows C Server &mdash; Powered by <span style="color:#0078d7;">C</span> and <span style="color:#43cea2;">Windows</span>
+      Hand-coded. Under-caffeinated. Possibly regretted. © 2025
     </div>
-
-
-
-</html></body>  </div>  </div>
+  </div>
 </body>
 </html>
